@@ -41,7 +41,8 @@
 #include <errno.h>
 
 #include "cerebro.h"
-#include "cerebro/cerebro_metric_control_protocol.h"
+
+#include "protocol/cerebro_metric_control_protocol.h"
 
 #include "cerebro_api.h"
 #include "cerebro_config_util.h"
