@@ -37,7 +37,8 @@
 #include <errno.h>
 
 #include "cerebro.h"
-#include "cerebro/cerebro_metric_server_protocol.h"
+
+#include "protocol/cerebro_metric_server_protocol.h"
 
 #include "cerebro_api.h"
 #include "cerebro_config_util.h"
