@@ -1,11 +1,11 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.5 2005-07-21 20:15:45 achu Exp $
+## $Id: Makefile.am,v 1.6 2005-07-27 00:29:22 achu Exp $
 ##*****************************************************************************
 
 include_HEADERS        = cerebro.h
-noinst_HEADERS         = cerebro/cerebro_metric_server_protocol.h \
-			 cerebro/cerebro_metric_control_protocol.h \
-			 cerebro/cerebrod_heartbeat_protocol.h
+noinst_HEADERS         = protocol/cerebro_metric_server_protocol.h \
+			 protocol/cerebro_metric_control_protocol.h \
+			 protocol/cerebrod_heartbeat_protocol.h
 nobase_include_HEADERS = cerebro/cerebro_clusterlist_module.h \
 			 cerebro/cerebro_config.h \
 			 cerebro/cerebro_config_module.h \
